fixed issues with delete

--- a/reminder/app/views/tasks/destroy.js.erb
+++ b/reminder/app/views/tasks/destroy.js.erb
@@ -1,1 +1,4 @@
-$("#row<%=@task.id%>").remove();
+// $("#row<%=@task.id%>").remove();
+$("#row<%=@task.id%>").fadeTo("slow",0.7, function(){
+            $(this).remove();
+})
