--- a/reminder/app/views/tasks/index.html.erb
+++ b/reminder/app/views/tasks/index.html.erb
@@ -24,7 +24,7 @@
       <table class="table">
         <thead>
           <tr id="header">
-            <th>title</th>
+            <th>Title</th>
             <th>Due date</th>
           </tr>
         </thead>
