--- a/reminder/app/views/tasks/_tablerow.html.erb
+++ b/reminder/app/views/tasks/_tablerow.html.erb
@@ -2,6 +2,6 @@
   <tr id="row<%=task.id%>">
     <td><%= task.title %></td>
     <td><%= task.due_date.strftime("%m/%d/%Y") %></td>
-    <td><%= link_to "Done", task, method: :delete, remote: true, class:"btn btn-primary btn-sm btn-block", "data-confirm"=> "Are you sure?"%></td>
+    <td><%= link_to "Done", task, method: :delete, remote: true, style: "width: 100px", class:"btn btn-primary btn-sm btn-block button-width", "data-confirm"=> "Are you sure?"%></td>
   </tr>
 <% end %>
